<?xml version="1.0"?>
<package format="2">
  <name>json_nlohmann</name>
  <version>3.9.1</version>
  <description>
     JSON for Modern C++
  </description>

  <maintainer email="denis@thekobi.com">Denis Cavalli</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
